third_party/llvm-project/clang/test/Modules/cxx20-export-import.cpp

// RUN: %clang_cc1 -std=c++20 -fmodules -fmodules-cache-path=%t -fimplicit-module-maps -I%S/Inputs -verify %s
export import dummy; // expected-error {{export declaration can only be used within a module interface unit after the module declaration}}
